--- a/res/mind_map.html
+++ b/res/mind_map.html
@@ -2,9 +2,203 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Simple Mind Map</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        .container {
+            padding-top: 20px;
+            text-align: center;
+        }
+
+        #mind-map-container {
+            position: relative;
+            margin: 0 auto;
+            width: 800px;  /* Adjust to your desired width */
+            height: 500px; /* Adjust height to create a bubble effect */
+            border: 2px solid #ccc;
+            border-radius: 40%;  /* Rounded corners for a bubble-like appearance */
+            background-color: #f9f9f9;
+            overflow: hidden;
+        }
+
+        .node {
+            position: absolute;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            cursor: pointer;
+            transition: all 0.3s;
+            z-index: 2;
+            font-size: 14px;
+            word-wrap: break-word;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+
+        .node:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.3);
+        }
+
+        .center-node {
+            background-color: lightgreen;
+            width: 150px;
+            height: 150px;
+            font-weight: bold;
+            z-index: 3;
+        }
+
+        .activity-node {
+            background-color: lightcoral;
+            width: 120px;
+            height: 120px;
+        }
+
+        .connection {
+            position: absolute;
+            background-color: #555;
+            z-index: 1;
+            transform-origin: left center;
+        }
+
+        .add-activity-btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
 
+<div class="container">
+    <h2>Interactive Mind Map: Reconnecting with Friends</h2>
+    <p>Add activities to reconnect with friends by clicking the button below</p>
+    <div id="mind-map-container"></div>
+    <button class="add-activity-btn" id="add-activity-btn">Add New Activity</button>
+</div>
+
+<script>
+    // Wait for DOM to be fully loaded
+    document.addEventListener('DOMContentLoaded', function() {
+        // Get the container
+        const container = document.getElementById('mind-map-container');
+        const containerRect = container.getBoundingClientRect();
+        const centerX = containerRect.width / 2;
+        const centerY = containerRect.height / 2;
+
+        // Initial activities
+        const activities = [
+            { id: 'node1', name: 'Hannah P went to Japan', angle: 0 },
+            { id: 'node2', name: 'You started cave diving', angle: 120 },
+            { id: 'node3', name: 'Hannah P is looking for a new hobby ', angle: 240 }
+        ];
+
+        // Create center node
+        const centerNode = document.createElement('div');
+        centerNode.className = 'node center-node';
+        centerNode.textContent = 'Reconnecting with Friends';
+        centerNode.style.left = (centerX - 75) + 'px';
+        centerNode.style.top = (centerY - 75) + 'px';
+        container.appendChild(centerNode);
+
+        // Function to calculate position based on angle and distance
+        function calculatePosition(angle, distance) {
+            const radian = angle * Math.PI / 180;
+            return {
+                x: centerX + Math.cos(radian) * distance - 60,
+                y: centerY + Math.sin(radian) * distance - 60
+            };
+        }
+
+        // Function to create connection line
+        function createConnection(x1, y1, x2, y2) {
+            const length = Math.sqrt(Math.pow(x2 - x1, 2) + Math.pow(y2 - y1, 2));
+            const angle = Math.atan2(y2 - y1, x2 - x1) * 180 / Math.PI;
+
+            const connection = document.createElement('div');
+            connection.className = 'connection';
+            connection.style.width = length + 'px';
+            connection.style.height = '2px';
+            connection.style.left = x1 + 'px';
+            connection.style.top = y1 + 'px';
+            connection.style.transform = `rotate(${angle}deg)`;
+
+            return connection;
+        }
+
+        // Function to render all nodes
+        function renderNodes() {
+            // Clear existing nodes except center node
+            const nodesToRemove = document.querySelectorAll('.activity-node, .connection');
+            nodesToRemove.forEach(node => node.remove());
+
+            // Render each activity node
+            activities.forEach((activity, index) => {
+                const distance = 200; // Distance from center
+                const pos = calculatePosition(activity.angle, distance);
+
+                // Create node
+                const node = document.createElement('div');
+                node.className = 'node activity-node';
+                node.dataset.id = activity.id;
+                node.textContent = activity.name;
+                node.style.left = pos.x + 'px';
+                node.style.top = pos.y + 'px';
+                container.appendChild(node);
+
+                // Create connection from center to node
+                const connection = createConnection(
+                    centerX,
+                    centerY,
+                    pos.x + 60, // Add half of node width
+                    pos.y + 60  // Add half of node height
+                );
+                container.appendChild(connection);
+            });
+        }
+
+        // Render initial nodes
+        renderNodes();
+
+        // Function to add new activity
+        function addActivity() {
+            const activityName = prompt("Enter a new activity name:");
+            if (activityName && activityName.trim() !== '') {
+                // Calculate new angle (evenly distribute nodes)
+                const newAngle = activities.length > 0 ?
+                    (360 / (activities.length + 1)) * activities.length : 0;
+
+                // Add new activity to the array
+                activities.push({
+                    id: 'node' + (activities.length + 1),
+                    name: activityName,
+                    angle: newAngle
+                });
+
+                // Redistribute angles evenly
+                activities.forEach((activity, index) => {
+                    activity.angle = (360 / activities.length) * index;
+                });
+
+                // Re-render all nodes
+                renderNodes();
+            }
+        }
+
+        // Add click event listener to button
+        document.getElementById('add-activity-btn').addEventListener('click', addActivity);
+    });
+</script>
 </body>
 </html>
