--- a/res/mind_map.html
+++ b/res/mind_map.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Mind Map with Conversation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Inline css because icba-->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,7 +59,7 @@
             transform: scale(1.05);
             box-shadow: 0 6px 12px rgba(0,0,0,0.3);
         }
-
+        /* changing colours for bubbles */
         .node.selected {
             border: 3px solid #007bff;
         }
