--- a/res/mind_map.html
+++ b/res/mind_map.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Mind Map with Conversation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <!--Inline css because icba-->
     <style>
         body {
@@ -95,7 +96,7 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #4CAF50;
+            background-color: #5ce54d;
             color: white;
             border: none;
             border-radius: 5px;
@@ -173,7 +174,7 @@
             color: #888;
         }
         .filter-container {
-            width: 250px; /* Increase width to display text properly */
+            width: 300px;
             background: white;
             padding: 8px;
             border: 1px solid #ddd;
@@ -182,16 +183,16 @@
         }
 
         .filter-container select {
-            width: 100%; /* Make the select element fit the container */
+            width: 150px;
             padding: 8px;
-            font-size: 16px; /* Increase font size for readability */
+            font-size: 20px;
             border-radius: 5px;
             border: 1px solid #ccc;
             background-color: #fff;
         }
 
         #conversation-filter {
-            width: 100%; /* Ensure the select element is fully extended */
+            width: 60%;
         }
 
 
@@ -200,31 +201,30 @@
 <body>
 
 <div class="container-fluid">
-    <h2 class="text-center mt-3 mb-4">Interactive Mind Map with Conversations</h2>
+    <h2 class="text-center mt-3 mb-4">Start Chatting with a Mind Map!</h2>
 
     <div class="page-container">
-        <!-- Left Panel - Mind Map -->
-
+        <!-- Left side-->
         <div class="left-panel">
             <div class="filter-container">
                 <select id="conversation-filter" class="form-select w-auto">
-                    <option value="mind_map.html">Hannah Conversation   </option>
-                    <option value="multipeeps_mindmap.html">School Friend Group  </option>
+                    <option value="mind_map.html">Hannah Conversation ___</option>
+                    <option value="multipeeps_mindmap.html">School Friend Group ___</option>
                 </select>
             </div>
             <br>
-            <h3>Mind Map: Reconnecting with Friends</h3>
-            <p>Select a bubble to start a conversation or add a new activity</p>
+            <h3>Drop a moment, pick up a conversation!</h3>
+            <p>Select a bubble to start a conversation or add a new bubble</p>
             <div id="mind-map-container"></div>
-            <button class="add-activity-btn" id="add-activity-btn">Add New Activity</button>
+            <button class="add-activity-btn" id="add-activity-btn">Add New Bubble</button>
         </div>
 
-        <!-- Right Panel - Conversation -->
+        <!-- Right Panel -->
         <div class="right-panel">
             <h3>Conversation</h3>
             <div id="conversation-area">
                 <div class="no-selection-message" id="no-selection">
-                    <p>Select a bubble from the mind map to view or start a conversation</p>
+                    <p>Select a bubble from the mind map to view and start a conversation</p>
                 </div>
                 <div id="conversation-container" class="conversation-container" style="display: none;">
                     <div class="conversation-header" id="conversation-title">Conversation Title</div>
@@ -242,13 +242,12 @@
 <script>
     // Wait for DOM to be fully loaded
     document.addEventListener('DOMContentLoaded', function() {
-        // Get the container
         const container = document.getElementById('mind-map-container');
         const containerRect = container.getBoundingClientRect();
         const centerX = containerRect.width / 2;
         const centerY = containerRect.height / 2;
 
-        // Conversation elements
+        // Conversation elements to
         const conversationContainer = document.getElementById('conversation-container');
         const noSelectionMessage = document.getElementById('no-selection');
         const conversationTitle = document.getElementById('conversation-title');
@@ -256,7 +255,7 @@
         const messageInput = document.getElementById('message-input');
         const sendButton = document.getElementById('send-btn');
 
-        // Store of conversations by node ID
+        // Store conversations by their node id
         const conversations = {
             'node1': [
                 { author: 'You', text: 'I heard you went to Japan! How was it?', time: '10:30 AM', isUser: true },
@@ -287,12 +286,12 @@
         // Create center node
         const centerNode = document.createElement('div');
         centerNode.className = 'node center-node';
-        centerNode.textContent = 'Reconnecting with Friends';
+        centerNode.textContent = 'ReKindl';
         centerNode.style.left = (centerX - 75) + 'px';
         centerNode.style.top = (centerY - 75) + 'px';
         container.appendChild(centerNode);
 
-        // Function to calculate position based on angle and distance
+        // Function to calculate position based on angle and distance (so ewual)
         function calculatePosition(angle, distance) {
             const radian = angle * Math.PI / 180;
             return {
@@ -317,7 +316,7 @@
             return connection;
         }
 
-        // Function to display conversation for a node
+        // Function to display conversation for a bubble node
         function displayConversation(nodeId, nodeName) {
             // Clear any selected node styling
             const allNodes = document.querySelectorAll('.node');
@@ -331,8 +330,6 @@
 
             // Update conversation title
             conversationTitle.textContent = `Conversation about: ${nodeName}`;
-
-            // Clear previous messages
             messagesContainer.innerHTML = '';
 
             // Show conversation container, hide no selection message
@@ -414,7 +411,7 @@
 
         // Function to add new activity
         function addActivity() {
-            const activityName = prompt("Enter a new activity name:");
+            const activityName = prompt("Enter a new bubble:");
             if (activityName && activityName.trim() !== '') {
                 // Calculate new angle (evenly distribute nodes)
                 const newAngle = activities.length > 0 ?
@@ -487,7 +484,7 @@
             setTimeout(() => {
                 if (selectedNode && conversations[selectedNode.id]) {
                     // Get friend name from the node name
-                    let friendName = "Friend";
+                    let friendName = "Hannah P";
                     if (selectedNode.name.includes("Hannah P")) {
                         friendName = "Hannah P";
                     }
@@ -521,7 +518,7 @@
             if (context.includes("Japan")) {
                 return "Japan was amazing! The food, culture, and people were all incredible. We should plan a trip together sometime!";
             } else if (context.includes("cave diving")) {
-                return "Hmm, perhaps if you try it in a safe place fir";
+                return "Hmm, perhaps if you try it in a safe place first";
             } else if (context.includes("hobby")) {
                 return "I've been thinking about trying pottery. Have you ever done that?";
             } else {
