--- a/res/bucketList.html
+++ b/res/bucketList.html
@@ -62,7 +62,7 @@
 <div class="container">
     <h1>🎉 Plutonic Date Bucket List 🎉</h1>
     <p>Take the awkwardness out of socializing! Pick one of these fun activities to reconnect with an old friend, colleague, or acquaintance!</p>
-
+git
     <ul id="bucket-list"></ul>
 
     <button id="reset">Send to: </button>
