--- a/res/bucketList.html
+++ b/res/bucketList.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h1>🎉 Friend Date Bucket List 🎉</h1>
     <p>Tick off the fun activities as you complete them with your bestie!</p>
-
+git 
     <ul id="bucket-list"></ul>
 
     <button id="reset">Reset Checklist</button>
