--- a/res/about.html
+++ b/res/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friend Date Bucket List</title>
+    <title>About Us - ReKindl</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -58,14 +58,35 @@
     </ul>
 </nav>
 
+<div class="center">
+    <div class="center-container">
+        <section>
+            <h1>About ReKindl</h1>
+            <h2>Our Mission: Bringing People Back Together</h2>
+        </section>
 
-<div class="container">
-    <h1>🎉 Plutonic Date Bucket List 🎉</h1>
-    <p>Take the awkwardness out of socializing! Pick one of these fun activities to reconnect with an old friend, colleague, or acquaintance!</p>
-git
-    <ul id="bucket-list"></ul>
+        <!-- About Content -->
+        <section class="about-content">
+            <p>ReKindl was created with a simple yet powerful goal: to help people reconnect with those who once mattered in their lives. Whether it's an old friend, a distant relative, or a former colleague, we believe that meaningful connections deserve a second chance.</p>
 
-    <button id="reset">Send to: </button>
+            <p>Our platform provides fun and engaging ways to break the ice and strengthen relationships. With carefully curated activities and conversation starters, we make it easy to rebuild bonds, no matter how much time has passed.</p>
+
+            <h3>Why Choose ReKindl?</h3>
+            <ul>
+                <li>Creative and engaging activities for reconnecting</li>
+                <li>Easy-to-use platform with simple steps</li>
+                <li>Designed for all types of relationships</li>
+                <li>Built to foster genuine and lasting connections</li>
+            </ul>
+        </section>
+
+        <!-- Join Us Section -->
+        <section class="join-us">
+            <h2>Join the Reconnection Movement</h2>
+            <p>Don't let time and distance define your relationships. Start reconnecting today!</p>
+            <a href="bucketList.html" class="btn">Explore Activities</a>
+        </section>
+    </div>
 </div>
 
 <script src="script.js"></script>
